# Pricing_Optimisation_Project

./: .env.example  .gitignore  Dockerfile  GUIDE_UTILISATEUR.md  Makefile  README.md  SETUP.md  compose.yaml  dvc.yaml  params.yaml  patch_css.py  patch_inputs.py  pyproject.toml  railway-ui.toml  railway.toml  requirements.txt  run_pipeline.py  run_training.py  start.sh
.github/workflows/: ci.yml  keep-alive.yml
configs/: data.yaml  features.yaml  logging.yaml  model.yaml  optimize.yaml  train.yaml
configs/hydra/: config.yaml
docker/: Dockerfile.api  Dockerfile.train  Dockerfile.ui
models/: elasticnet_model.joblib  feature_names.joblib  lightgbm_model.joblib  scaler.joblib
src/: __init__.py
src/data/: __init__.py  make_dataset.py  split_dataset.py
src/features/: __init__.py  build_features.py
src/models/: __init__.py  evaluate.py  optimize_prices.py  predict.py  register.py  train.py
src/serving/: __init__.py  api.py
src/ui/: app.py
src/utils/: __init__.py  io.py  logging.py  metrics.py  mlflow_utils.py  paths.py
tests/: conftest.py  test_api.py  test_data.py  test_features.py  test_models.py
